--- a/index.html
+++ b/index.html
@@ -5,9 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Badal Web Developer & Digital Marketer</title>
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
+<section>
+    <div class="half-width">
+        <h1>Welcome to</h1> 
+        <h1><span class="Name-Highlight">Badal's</span> Web World!</h1>
+        <h3>World-class professional Web Developer</h3>
+        <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+    </div>
+
+    <div class="half-width">
+        <img src="images/image 11.png" alt="My image">
+    </div>
+
     
+</section>
 </body>
 </html>
